--- a/projects.css
+++ b/projects.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     margin: 2.5rem;
-    justify-content: space-around;
+    justify-content: space-evenly;
    position: relative;
    width: 100vw;
    flex-wrap: wrap;
@@ -11,20 +11,59 @@
 .project_item{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     background-color:var(--main-color) ;
     padding: 2rem;
-    height: 20rem;
+    height: 15rem;
     width: 10rem;
-    margin-right:1.25rem ;
+    margin-right:.75rem ;
     margin-top: 1rem;
-    border-radius: 4px;
+    border-radius: 1rem;
     cursor: pointer;
     transition: all 3s linear;
-    /* transition:  3s linear; */
-    position:relative;
+    /*transition:  3s linear;
+    */position:relative;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    box-shadow: #1f1f1f 3px 5px 6px;
 }
 .project_item img{
-    height: 90%;
+    height: 50%;
+    position: absolute;
+    top: 25%;
+    border-radius: inherit;
+    -webkit-border-radius: inherit;
+    -moz-border-radius: inherit;
+    -ms-border-radius: inherit;
+    -o-border-radius: inherit;
+    filter: blur(1px);
+    -webkit-filter: blur(1px);
+}
+.project_item .title{
+    position: absolute;
+    top: .5%;
+}
+
+.stack{
+    position: absolute;
+    bottom:.5rem;
+    width: 80%;
+    height: 10%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+}
+.stack_item{
+    background-color: var(--btn-color);
+    padding: .5rem;
+    border-radius: .5rem;
+    -webkit-border-radius: .5rem;
+    -moz-border-radius: .5rem;
+    -ms-border-radius: .5rem;
+    -o-border-radius: .5rem;
+    margin: .5rem;
 }
