--- a/styles.css
+++ b/styles.css
@@ -144,12 +144,25 @@ h1{
     height: 2rem;
     margin: .5rem;
     object-fit: contain;
-    /* filter: invert(1) sepia(0) saturate(130%) hue-rotate(10deg); */
-    fill: rgb(24, 23, 23);
+    /*filter: invert(1) sepia(0) saturate(130%) hue-rotate(10deg);
+    */fill: rgb(24, 23, 23);
     cursor: pointer;
+  
+}
+.icon_socials:hover{
+  fill: var(--btn-color);
+ 
 }
 .icon_socials svg{
     height: 1.5rem;
+    transition:all 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
+    -webkit-transition:all .75s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
+    -moz-transition:all 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
+    -ms-transition:all 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
+    -o-transition:all 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
+}
+footer .socials .icon_socials svg:hover{
+    fill: var(--main-color);
 }
 .about-me__info{
     /* height: 3rem; */
@@ -452,6 +465,14 @@ li{
 .more_about-content .special{
     color: #ff1cff;
     font-weight: 600;
+    transition: .5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    -webkit-transition: .5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    -moz-transition: .5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    -ms-transition: .5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    -o-transition: .5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.more_about-content .special:hover{
+    color: var(--main-text-color);
 }
 
 
@@ -478,22 +499,27 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin: 3.25rem;
-    background-color: var(--btn-color-light);
+    margin: .25rem;
+    /* background-color: var(--btn-color-light); */
     border-radius: 40%;
     align-items: center;
+    display: none;
 }
 .position_marker-line{
-    background-color: var(--main-text-color);
-    height: 5%;
-    width: 60%;
-    border-radius: 10px;
+    border:solid var(--main-text-color) 2px;
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
     cursor: pointer;
     transition: width 3s ;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
 }
 .active{
-    background-color: var(--variant-color);
-    width: 100%;
+   border:solid var(--btn-color-light) 2px;
+    /* width: 100%; */
 }
 
 /* scrollbar */
@@ -540,7 +566,6 @@ footer{
 
 #preloader{
     background: var(--btn-color);
-    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -590,7 +615,15 @@ footer{
     justify-content:center;
     align-items:center;
     text-align:center;
-    margin:3rem;
+    margin-left:20vw;
+    margin-bottom: 8vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /* media queries */
+
+.navbar_mobile{
+    position: fixed;
+    background-color: white;
+    
+}
