--- a/card.css
+++ b/card.css
@@ -1,6 +1,4 @@
-:root{
-   
-}
+
 .skills_cards{
     display: flex;
     flex-direction: row;
@@ -80,7 +78,7 @@ svg{
     /* transform: ; */
 }
 
- .skills_card *:hover{
+ .skills_card:hover .icon svg{
     fill: var(--btn-color);
     background-color: transparent;
 }
