--- a/footer.css
+++ b/footer.css
@@ -8,12 +8,13 @@
     --main-light-color:hsl(0, 0%, 25%);
 }
 .footer_span{
-    color: #858484;
+    color: #9e9e9e;
     margin: 10px;
 }
 .footer_span span{
     color:var(--main-color);
 }
+
 
 .footer_content{
     display: flex;
