--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,17 @@
     font-size: 16px;
     scroll-behavior: smooth;
 }
+html{
+    /* width: 100vw;
+    overflow-x: hidden; */
+}
 body{
     background-color: var(--main-color);
     color: var(--main-text-color);
     max-width: 100vw;
     overflow-x:hidden ;
     font-family: Arial, Helvetica, sans-serif;
-   position: relative; 
+   /* position: relative;  */
 }
 #main_content{
     display: none;
@@ -66,7 +70,7 @@ a{
     align-self: flex-start;
 }
 section{
-    margin: 5rem 2rem;
+    /* margin: 5rem 2rem; */
     /* transform: translateX(-2rem); */
 }
 
@@ -80,7 +84,19 @@ section{
     cursor: pointer;
     margin: 1rem 0;
     transition: 3s all cubic-bezier(0.165, 0.84, 0.44, 1);
+    font-size: 1.2rem;
+
 }
+.contact_button a{
+    font-size: 1.2rem;
+    color: var(--btn-color);
+    text-shadow: 0 0 0 .125 white
+     0 0 0 0.125em var(--btn-color) ;
+}
+.contact_button:hover a{
+    color: white;
+}
+
 .contact_button:hover{
     color: white;
     border:solid var(--btn-color-light) 2px;
@@ -98,7 +114,11 @@ h1{
     margin: 2rem 4rem;
     font-family: 'Courier New', Courier, monospace;
     width: 100vw;
-    /* flex-wrap: wrap; */
+    transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
+    -webkit-transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
+    -moz-transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
+    -ms-transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
+    -o-transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
 }
 .about-me__title{
     width: 35%;
@@ -276,7 +296,7 @@ footer .socials .icon_socials svg:hover{
     margin: 0;
     min-height: 85vh;
     position: relative;
-    width: 100%;
+    width: 100vw;
     overflow: visible;
     justify-self: start;
     border-top: solid 4px var(--btn-color-light);
@@ -622,8 +642,90 @@ footer{
 
 /* media queries */
 
-.navbar_mobile{
+.navbar_mobile-bar{
     position: fixed;
-    background-color: white;
+    background-color:var(--main-color);
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.3);
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    top: 3%;
+    right: 4%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    z-index: 100;
+    padding: .5rem;
+    cursor: pointer;
+    display: none;
+}
+/* .navbar_mobile{
+    position: absolute;
+    right: 0;
+    background-color: #ff1cff;
+} */
+.navbar_mobile{
+    display: flex;
+    flex-direction: column;
+    display: none;
     
+    /* height: 10vh; */
+   
+}
+.navbar_mobile .navbar-content .navbar-links{
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: absolute;
+    right: 1rem;
+}
+.navbar_mobile .navbar-content .navbar-links li{
+    padding:.75rem 1.5rem;
+    border: solid var(--btn-color) 2px;
+    background-color: transparent;
+    color: var(--btn-color);
+    border-radius: 6px;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin: 1rem 0;
+    transition: 3s all cubic-bezier(0.165, 0.84, 0.44, 1);
+    font-size: 1.2rem;
+}
+
+.nav_line{
+    height: .2rem;
+    width: 2.25rem;
+    background-color: var(--btn-color);
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+
+.nav_line:nth-child(2){
+    width: 1.75rem;
+}
+
+
+
+@media (max-width:48rem){
+ .navbar_mobile-bar{
+     display: flex;
+ }
+ .navbar-container{
+     display: none;
+ }
+ .navbar_mobile .navbar-content{
+     display: flex;
+ }
+}
+@media(max-width:63.875rem){
+    .about-me{
+        flex-wrap: wrap;
+    }
 }
